tests/parser/bug_65/test.m.out
In test.m, line 11
| function z = bar()
| ^^^^^^^^ error: this function must be terminated with end
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
